force-app/main/default/objects/BusinessCentralSendRequest__c/BusinessCentralSendRequest__c.object-meta.xml
<CustomObject>
    <label>Business Central Send Request</label>
    <nameField>
        <displayFormat>Request-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Central Send Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>