force-app/main/default/objects/BusinessCentralSendRequest__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>