force-app/main/default/objects/BusinessCentralSendRequest__c/fields/AccountReference__c.field-meta.xml
<CustomField>
    <fullName>AccountReference__c</fullName>
    <label>Account Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>