force-app/main/default/objects/BusinessCentralSendRequest__c/fields/ContactReference__c.field-meta.xml
<CustomField>
    <fullName>ContactReference__c</fullName>
    <label>Contact Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>