force-app/main/default/objects/BusinessCentralSendRequest__c/fields/ErrorMessageTruncated__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageTruncated__c</fullName>
    <label>Error Message Truncated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>