force-app/main/default/objects/BusinessCentralSendRequest__c/fields/InvoiceReference__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReference__c</fullName>
    <label>Invoice Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>