force-app/main/default/objects/BusinessCentralSendRequest__c/fields/IsScheduledForDeletion__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledForDeletion__c</fullName>
    <formula>AND (TEXT(Status__c) = &apos;Completed&apos;, DATEVALUE(CreatedDate) &lt; TODAY() - 93)</formula>
    <label>Scheduled For Deletion</label>
    <type>Checkbox</type>
</CustomField>