force-app/main/default/objects/BusinessCentralSendRequest__c/fields/PaymentId__c.field-meta.xml
<CustomField>
    <fullName>PaymentId__c</fullName>
    <label>Payment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>